<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="7dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/sale_successful"
            android:textColor="@color/purple_500"
            android:textSize="19dp"/>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/textViewInvNo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/invoice_no"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPaymentType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/payment_type"
                android:textSize="15dp"
                android:layout_weight="20"/>

            <TextView
                android:id="@+id/textViewTotalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/total"
                android:textSize="22dp"
                android:layout_weight="12"/>


        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>